overlaping issue and border radius fix

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -20,17 +20,23 @@ header {
     height: 80px;
     border-bottom: 1px solid #F1F5F9;
     background-color: rgb(255, 255, 255);
+    z-index: 2;
 }
 
 .header__logo-container, .header__navigation, .header__side-menu {
     flex: 1;
 }
 
-.header__logo-container {
+.header__logo-container a{
     font-size: 0.8rem;
     display: flex;
     justify-content: center;
 }
+
+.header__logo-container a:hover{
+    background: none;   
+}
+
 
 .header__logo-container img{
     width: auto;
@@ -66,6 +72,10 @@ header {
     border-radius: 50%;
     padding: 10px; 
     cursor: pointer;
+}
+
+.header__side-menu a:hover {
+    border-radius: 50%;
 }
 
 .header__side-menu button:hover{
